# SpellChecker

./: Cargo.toml  README.md
src/: checker.rs  cli.rs  dictionary.rs  editor.rs  gui.rs  language.rs  lib.rs  main.rs  sidebar.rs  theme.rs  util.rs
src/dictionaries/: dictionary(afr).txt
