[package]
name = "spellchecker"
version = "1.0.0"
edition = "2021"
authors = ["RR-Ralefaso <rrralefaso@outlook.com>"]
description = "An Atom IDE-inspired multilingual spell checker with programming language support"
repository = "https://github.com/RR-Ralefaso/SpellChecker"
license = "MIT"
readme = "README.md"
keywords = ["spellcheck", "editor", "multilingual", "programming"]
categories = ["text-editors", "text-processing"]

[features]
default = ["gui"]
cli = ["clap", "colored", "indicatif"]
gui = ["eframe", "egui", "rfd", "egui_extras"]

[[bin]]
name = "spellchecker"
path = "src/main.rs"

[[bin]]
name = "spellchecker_cli"
path = "src/cli.rs"
required-features = ["cli"]

[lib]
name = "spellchecker"
path = "src/lib.rs"

[dependencies]
# GUI dependencies
eframe = { version = "0.27", features = ["persistence"], optional = true }
egui = { version = "0.27", optional = true }
rfd = { version = "0.14", optional = true }
egui_extras = { version = "0.27", optional = true }

# Core functionality
rayon = "1.8.0"
regex = "1.10.2"
walkdir = "2.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
lru = "0.12.3"
dashmap = "5.5.3"
unic-langid = "0.9.5"
encoding_rs = "0.8.33"
once_cell = "1.19.0"
parking_lot = "0.12.3"
directories = "5.0"
open = "5.0.0"
unicode-segmentation = "1.11.0"

# CLI dependencies
clap = { version = "4.5", optional = true, features = ["derive"] }
colored = { version = "2.1", optional = true }
indicatif = { version = "0.17", optional = true }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true

[profile.test]
opt-level = 3
debug = false